--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=9D3E3FE0497A1DF67FDF03AA17EF1436
+ProjectID=879C7C064063F6C32B66F5A72378BADA
+CompanyName=EmbraceIT Ltd
+CompanyDistinguishedName=EmbraceIT
+CopyrightNotice=Copyright Ben Tristem 2016.
 
 [StartupActions]
 bAddPacks=True
